--- a/Integrador_Grupo6/Vistas/StyleSheet.css
+++ b/Integrador_Grupo6/Vistas/StyleSheet.css
@@ -1,28 +1,25 @@
-﻿body {
-}
-
-
+﻿
 .TextBox {
-    background-color: darkcyan;
+    background-color: #232F3B;
     border: none;
     border-bottom: 1px solid darkgrey;
     outline: none;
     -webkit-transition: all 500ms ease;
-    color:white;
-    
+    color: white;
+    box-sizing: border-box;
+    width: 100%;
 }
-td .TextBox:focus{
-    border-bottom: 1px solid cyan;
-
-}
-
-td {
-    margin-bottom: 3px;
+.Form {
+    font-family: sans-serif;
+    Color: white;
     text-align: left;
+    display: Flex;
+    margin-bottom: 20px;
+    padding: 10px;
+    width:90%;
 }
-
-tr {
-    margin: 5px;
+.TextBox:focus{
+    border-bottom: 1px solid darkcyan;
 }
 
 header {
@@ -70,6 +67,7 @@ header nav a:hover {
     background: darkcyan;
 }
 
+
 .boton-personalizado {
     text-decoration: none;
     font-weight: 600;
@@ -114,6 +112,24 @@ header nav a:hover {
     width: 250px;
     margin-top: 5px;
     
+}
+
+.popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+
+.popup-contenido {
+    background-color: #232F3B;
+    color: white;
+    width: 300px;
+    height: 300px;
 }
 
 .auto-style1 {
