--- a/Integrador_Grupo6/Vistas/StyleSheet.css
+++ b/Integrador_Grupo6/Vistas/StyleSheet.css
@@ -6,17 +6,37 @@
     outline: none;
     -webkit-transition: all 500ms ease;
     color: white;
+    margin-left:20px;
     box-sizing: border-box;
-    width: 100%;
+    width: 90%;
+}
+.Button {
+    justify-content: center;
+    display:flex;
+}
+.Datos {
+  Height:90px;
+}
+.Label {
+    white-space: nowrap; 
+    display: inline-block; 
+    margin-left: 30px;
+    margin-top: 5px;
+    text-align: left;
+}
+.Hyperlink{
+    Text-align:center;
+    margin-bottom: 40px;
 }
 .Form {
     font-family: sans-serif;
     Color: white;
     text-align: left;
+    margin-bottom:40px;
+    Font-size: 12px;
     display: Flex;
-    margin-bottom: 20px;
-    padding: 10px;
     width:90%;
+    height:20px;
 }
 .TextBox:focus{
     border-bottom: 1px solid darkcyan;
@@ -120,7 +140,7 @@ header nav a:hover {
     left: 0;
     width: 100%;
     height: 100%;
-    display: none;
+    display:flex;
     justify-content: center;
     align-items: center;
 }
