--- a/Integrador_Grupo6/Vistas/StyleSheet.css
+++ b/Integrador_Grupo6/Vistas/StyleSheet.css
@@ -99,7 +99,12 @@ header nav a:hover {
     padding-right: 30px;
     background-color: darkcyan;
     border: none;
+    -webkit-transition: all 500ms ease;
 }
+    .boton-personalizado:hover {
+        cursor: pointer;
+        background-color: #33cccc;
+    }
 
 .estiloListView {
     background-color:white;
@@ -170,70 +175,6 @@ header nav a:hover {
     font-size: 20px;
 }
 
-.auto-style1 {
-    width: 100%;
-}
-
-.auto-style2 {
-    width: 402px;
-}
-
-.auto-style3 {
-    width: 100%;
-    height: 688px;
-}
-
-.auto-style4 {
-    height: 223px;
-    width: 571px;
-}
-
-.auto-style5 {
-    width: 220px;
-}
-
-.auto-style6 {
-    font-size: x-large;
-}
-
-.auto-style7 {
-    text-decoration: underline;
-}
-
-.auto-style8 {
-    font-size: medium;
-}
-
-.auto-style9 {
-    width: 239px;
-}
-
-.auto-style10 {
-    margin-right: 1px;
-}
-.auto-style11 {
-    width: 318px;
-}
-.auto-style12 {
-    width: 800px;
-}
-.auto-style13 {
-    width: 300px;
-}
-.auto-style14 {
-   font-size: x-large;
-   text-decoration: underline;
- }
-.auto-style15 {
-    font-size: large;
-}
-.auto-style16 {
-    width: 800px;
-    height: 45px;
-}
-.auto-style17 {
-   height: 45px;
-}
 
 
 
@@ -250,18 +191,5 @@ header nav a:hover {
 
 .radioBtn {
     font-family: "Arial", sans-serif;
-}
-.auto-style5 {
-    height: 234px;
-    width: 571px;
-}
-
-.auto-style6 {
-    height: 63px;
-    width: 571px;
-}
-
-.auto-style7 {
-    width: 571px;
 }
 
