--- a/Integrador_Grupo6/Vistas/StyleSheet.css
+++ b/Integrador_Grupo6/Vistas/StyleSheet.css
@@ -51,7 +51,7 @@ header {
 
 .wrapper {
     width: 90%;
-    max-width: 1000px;
+    min-width: 1100px;
     margin: auto;
     overflow: hidden;
 }
@@ -177,5 +177,13 @@ header nav a:hover {
 
 .radioBtn {
     font-family: "Arial", sans-serif;
+    
+}
+
+.contenedor {
+    border: 1px solid #f2f2f2;
+    width: 200px;
+    height: 600px;
+    float:left;
 }
 
