--- a/Integrador_Grupo6/Vistas/StyleSheet.css
+++ b/Integrador_Grupo6/Vistas/StyleSheet.css
@@ -187,3 +187,42 @@ header nav a:hover {
     float:left;
 }
 
+/*---------POPUP--------------------*/
+.contenedor-popup{
+    width:100%;
+    height:100%;
+    top:0%;
+    left:0%;
+    position:fixed;
+    background-color: rgba(0,0,0,0.6);
+    transition: all 600ms;
+}
+
+.popup {
+    width: 100%;
+    max-width: 800px;
+    height: 500px;
+    background-color: #232F3B;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.funciones-popup{
+
+}
+
+#lblTextoPopup.funciones-popup {
+    position: relative;
+    top: -100px;
+    left: 40%;
+    font-size: 40px;
+}
+
+#lbl.funciones-popup {
+    position: relative;
+    top: -100px;
+    left: 40%;
+    font-size: 40px;
+}
+
