--- a/Integrador_Grupo6/Vistas/StyleSheet.css
+++ b/Integrador_Grupo6/Vistas/StyleSheet.css
@@ -247,5 +247,23 @@ header nav a:hover {
 
     to {
         opacity: 1;
+        visibility: visible;
+    }
+}
+
+.fade-out {
+    animation: fade-out 0.5s ease;
+    animation-fill-mode: forwards;
+    opacity: 1;
+}
+
+@keyframes fade-out {
+    from {
+        opacity: 1;
+    }
+
+    to {
+        opacity: 0;
+        visibility:hidden;
     }
 }
