filtros sin terminar aun

--- a/Integrador_Grupo6/Vistas/StyleSheet.css
+++ b/Integrador_Grupo6/Vistas/StyleSheet.css
@@ -153,6 +153,7 @@ header nav a:hover {
     display:flex;
     justify-content: center;
     align-items: center;
+    visibility: hidden;
 }
 
     .popup-contenido {
