--- a/Integrador_Grupo6/Vistas/StyleSheet.css
+++ b/Integrador_Grupo6/Vistas/StyleSheet.css
@@ -4,11 +4,13 @@
     border: none;
     border-bottom: 1px solid darkgrey;
     outline: none;
+    display:flex;
     -webkit-transition: all 500ms ease;
     color: white;
     margin-left:20px;
     box-sizing: border-box;
     width: 90%;
+    float: right;
 }
 .Button {
     justify-content: center;
@@ -16,6 +18,9 @@
 }
 .Datos {
   Height:90px;
+}
+.DatosRegistro{
+    width:60%;
 }
 
 .Label {
@@ -46,7 +51,7 @@
     margin-bottom:40px;
     Font-size: 12px;
     display: Flex;
-    width:90%;
+    width: 90%;
     height:20px;
 }
 .TextBox:focus{
