--- a/Integrador_Grupo6/Vistas/StyleSheet.css
+++ b/Integrador_Grupo6/Vistas/StyleSheet.css
@@ -58,6 +58,25 @@
     border-bottom: 1px solid darkcyan;
 }
 
+.btnCerrar{
+    display: inline-block;
+    color: #fff;
+    text-decoration: none;
+    padding: 10px 20px;
+    margin-left: 20px;
+    margin-top: 20px;
+    line-height: normal;
+    font-size: 20px;
+    font-weight: bold;
+    -webkit-transition: all 500ms ease;
+    -o-transition: all 500ms ease;
+    transition: all 500ms ease;
+}
+
+.btnCerrar:hover {
+        background: darkcyan;
+}
+
 header {
     width: 100vw;
     overflow: hidden;
