--- a/Integrador_Grupo6/Vistas/StyleSheet.css
+++ b/Integrador_Grupo6/Vistas/StyleSheet.css
@@ -65,6 +65,7 @@
     padding: 10px 20px;
     margin-left: 20px;
     margin-top: 20px;
+    margin-bottom:20px;
     line-height: normal;
     font-size: 20px;
     font-weight: bold;
