--- a/Integrador_Grupo6/Vistas/StyleSheet.css
+++ b/Integrador_Grupo6/Vistas/StyleSheet.css
@@ -265,8 +265,8 @@ header nav a:hover {
 }
 
 .contenedor {
-    border: 1px solid #f2f2f2;
+    border: 3px solid #f2f2f2;
+    padding:10px;
     width: 200px;
-    height: 600px;
     float:left;
 }
