--- a/Integrador_Grupo6/Vistas/StyleSheet.css
+++ b/Integrador_Grupo6/Vistas/StyleSheet.css
@@ -146,6 +146,7 @@ header nav a:hover {
     border-width: 3px;
     border-color: darkcyan;
     width: 300px;
+    height:500px;
     text-align:center;
 }
 .lvImagen {
